meja/tests/row-pattern-distinct-closed.stderr
File "tests/row-pattern-distinct-closed.meja", line 3, characters 6-8:
Error: Incompatible types [<`A | `B > `A] and [>`C]:
       Cannot unify [<`A | `B > `A] and [>`C]:
       the constructor `C is not present in both.
